# digital-tickler

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  readme.md  requirements_dev.txt  setup.cfg  setup.py  start_tickler.sh  tickler.py  tox.ini  versioneer.py
.github/: ISSUE_TEMPLATE.md
digital_tickler/: __init__.py  _version.py  digital_tickler.py  start_tickler.sh
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  usage.rst
src/digital_tickler/: __init__.py  digital_tickler.py  start_tickler.sh
tests/: __init__.py  digital_tickler_test.py  test_digital_tickler.py
